# wagtailiconify

./: .gitignore  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  requirements-dev.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
wagtailiconify/: apps.py  blocks.py
wagtailiconify/choices/: fontawesome.py
wagtailiconify/develop/scripts/: fontawesome.py
wagtailiconify/develop/scss/: wagtailiconify_fontawesome.scss
wagtailiconify/templates/wagtailiconify/: icon_block.html
wagtailiconify/templatetags/: wagtailiconify.py
