[metadata]
name = wagtailiconify
version = 0.0.1
description_file = A plugin for Wagtail CMS, icon blocks (fontawesome)
long_description = file: README.md
url = https://github.com/Nefonfo/wagtailiconify
author = Nefonfo
author_email = victorarmenta30@gmail.com
license = MIT
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8

install_requires =
    Django >= 3.2.0
    wagtail >= 2.15.0